...
    <string name="LinkDeviceFragment__unlock_to_link">Unlock to link a device</string>
    <!-- Title on bottom sheet explaining our usage of biometrics to link a device -->
    <string name="LinkDeviceFragment__before_linking">Before linking, confirm it\'s you</string>
    <!-- Body of bottom sheet explaining that users should use their device pin or biometrics and not their Signal pin -->
    <string name="LinkDeviceFragment__tap_continue_and_enter_phone">Tap continue and enter your phone\'s lock to confirm. Do not enter your VPrime X PIN.</string>
    <!-- Button that dismisses the bottom sheet -->
    <string name="LinkDeviceFragment__continue">Continue</string>
    <!-- Option on button to contact support -->
    <string name="LinkDeviceFragment__contact_support">Contact support</string>
    <!-- Title of dialog asking users if they want to submit debug logs when contacting support -->
    <string name="LinkDeviceFragment__submit_debug_log">Submit debug log?</string>
    <!-- Body of dialog explaining what debug logs are and that they are optional to submit -->
    <string name="LinkDeviceFragment__your_debug_logs">Your debug logs will help us troubleshoot your issue faster. Submitting your logs is optional.</string>
...
    <string name="ViewBadgeBottomSheetDialogFragment__s_supports_signal_with_a_monthly">%1$s supports VPrime X with a monthly donation. VPrime X is a nonprofit with no advertisers or investors, supported only by people like you.</string>
    <!-- Description of a page in the bottom sheet of a one-time badge. Placeholder is a user\'s short-name -->
    <string name="ViewBadgeBottomSheetDialogFragment__s_supports_signal_with_a_donation">%1$s supports VPrime X with a donation. VPrime X is a nonprofit with no advertisers or investors, supported only by people like you.</string>

    <string name="ImageView__badge">Badge</string>

    <string name="SubscribeFragment__cancel_subscription">Cancel Subscription</string>
    <string name="SubscribeFragment__confirm_cancellation">Confirm Cancellation?</string>
    <string name="SubscribeFragment__you_wont_be_charged_again">You won\'t be charged again. Your badge will be removed from your profile at the end of your billing period.</string>
    <string name="SubscribeFragment__not_now">Not now</string>
    <string name="SubscribeFragment__confirm">Confirm</string>
    <string name="SubscribeFragment__update_subscription">Update Subscription</string>
    <string name="SubscribeFragment__your_subscription_has_been_cancelled">Your subscription has been cancelled.</string>
    <string name="SubscribeFragment__update_subscription_question">Update subscription?</string>
    <string name="SubscribeFragment__update">Update</string>
    <string name="SubscribeFragment__you_will_be_charged_the_full_amount_s_of">You will be charged the full amount (%1$s) of the new subscription price today. Your subscription will renew monthly.</string>

    <string name="Subscription__s_per_month">%s/month</string>
...
