<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2023 Signal Messenger, LLC
  ~ SPDX-License-Identifier: AGPL-3.0-only
  -->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.vprimex.messenger.conversation.mutiselect.MultiselectRecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>
